--- a/packages/extensions-sdk/package.json
+++ b/packages/extensions-sdk/package.json
@@ -43,6 +43,7 @@
 		"commander": "^8.0.0",
 		"execa": "^5.1.1",
 		"fs-extra": "^10.0.0",
+		"inquirer": "^8.2.4",
 		"ora": "^5.4.0",
 		"rollup": "^2.67.3",
 		"rollup-plugin-styles": "^4.0.0",
@@ -52,6 +53,7 @@
 	},
 	"devDependencies": {
 		"@types/fs-extra": "9.0.13",
+		"@types/inquirer": "8.2.1",
 		"npm-run-all": "4.1.5",
 		"rimraf": "3.0.2",
 		"typescript": "4.5.2"
