--- a/packages/extensions-sdk/package.json
+++ b/packages/extensions-sdk/package.json
@@ -41,11 +41,13 @@
 		"@vue/compiler-sfc": "^3.1.1",
 		"chalk": "^4.1.1",
 		"commander": "^8.0.0",
+		"esbuild": "^0.15.10",
 		"execa": "^5.1.1",
 		"fs-extra": "^10.0.0",
 		"inquirer": "^8.2.4",
 		"ora": "^5.4.0",
 		"rollup": "^2.67.3",
+		"rollup-plugin-esbuild": "^4.10.1",
 		"rollup-plugin-styles": "^4.0.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.31.2",
