Set esbuild sourceMap option based on cli flag

--- a/packages/extensions-sdk/templates/common/typescript/config/tsconfig.json
+++ b/packages/extensions-sdk/templates/common/typescript/config/tsconfig.json
@@ -22,8 +22,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"allowSyntheticDefaultImports": true,
 		"isolatedModules": true,
-		"rootDir": "./src",
-		"sourceMap": true
+		"rootDir": "./src"
 	},
 	"include": ["./src/**/*.ts"]
 }
